src/test/results/deca/codegen/valid/provided/exmathdoc.res
cos(0.0) = cos(f) not yet implemented
Error : end of the method Math.cos without return
