src/test/results/deca/codegen/invalid/Objet/NoReturn-Asm.res
Error : end of the method A.function without return
